tofu/modules/security/main.tf
resource "aws_security_group" "sg_server" {
  #checkov:skip=CKV_AWS_260:Port 80 open intentionally for web traffic
  #checkov:skip=CKV2_AWS_5:SG attached to EC2 via vpc_security_group_ids, checkov false positive
  name        = "${var.environment}-security-group"
  description = "Security Group for Instance"
  vpc_id      = var.vpc_id

  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Port for kubernetes"
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-security-group"
  }
}
